--- a/Exercici09.html
+++ b/Exercici09.html
@@ -4,6 +4,8 @@
 <head>
     <title>Cupcake Ipsum Exam 1</title>
     <meta charset="utf-8">
+    <link href="Exercici09.css" rel="stylesheet" type="text/css">
+    <link href="http://fonts.cdnfonts.com/css/liberation-sans" rel="stylesheet">
 </head>
 
 <body>
